<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>poly_exploration_ros</name>
  <version>0.6.2</version>
  <description>Polygon exploration ROS node</description>
  <maintainer email="062.127@gmail.com">Andreas Ziegler</maintainer>
  <license>Apache License 2.0</license>
  <author>Andreas Ziegler</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>poly_exploration</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>poly_exploration</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
